--- a/configs/releng/grub/grub.cfg
+++ b/configs/releng/grub/grub.cfg
@@ -14,6 +14,10 @@ if loadfont "${prefix}/fonts/unicode.pf2" ; then
     set gfxmode="auto"
     terminal_input console
     terminal_output console
+    # Optional background image in GRUB directory
+    if [ -f "${prefix}/splash.png" ]; then
+        background_image "${prefix}/splash.png"
+    fi
 fi
 
 # Enable serial console
@@ -37,20 +41,20 @@ else
 fi
 
 # Set default menu entry
-default=archlinux
+default=archgenos
 timeout=15
 timeout_style=menu
 
 
 # Menu entries
 
-menuentry "Arch Linux install medium (%ARCH%, ${archiso_platform})" --class arch --class gnu-linux --class gnu --class os --id 'archlinux' {
+menuentry "ArchGenOS install medium (%ARCH%, ${archiso_platform})" --class arch --class gnu-linux --class gnu --class os --id 'archgenos' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID%
     initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 }
 
-menuentry "Arch Linux install medium with speakup screen reader (%ARCH%, ${archiso_platform})" --hotkey s --class arch --class gnu-linux --class gnu --class os --id 'archlinux-accessibility' {
+menuentry "ArchGenOS install medium with speakup screen reader (%ARCH%, ${archiso_platform})" --hotkey s --class arch --class gnu-linux --class gnu --class os --id 'archgenos-accessibility' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% accessibility=on
     initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
