--- a/configs/baseline/syslinux/syslinux.cfg
+++ b/configs/baseline/syslinux/syslinux.cfg
@@ -1,6 +1,7 @@
 SERIAL 0 115200
 UI menu.c32
-MENU TITLE Arch Linux
+MENU TITLE ArchGenOS
+MENU BACKGROUND ../images/splash.png
 MENU CLEAR
 
 DEFAULT arch
